Updated index and string methods, added array, lists and map files

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <script src="mathop.js"></script>
     <script src="var-let-const.js"></script> -->
     <!-- <script src="curry-callback.js"></script> -->
-    <script src="shallow-deep.js"></script>
+    <!-- <script src="shallow-deep.js"></script> -->
     <!-- <script src="string-methods.js"></script> -->
+     <!-- <script src="map.js"></script>
+     <script src="loop.js"></script> -->
+     <script src="array.js"></script>
 </body>
 </html>
