--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- <script src="string-methods.js"></script> -->
      <!-- <script src="map.js"></script>
      <script src="loop.js"></script> -->
-     <script src="array.js"></script>
+     <!-- <script src="array.js"></script> -->
+     <script src="nestedfunc.js"></script>
 </body>
 </html>
